--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
+    "@mui/x-charts": "^6.18.3",
     "@mui/x-date-pickers": "^6.18.5",
     "axios": "^1.6.2",
     "date-fns": "^2.25.0",
